# or_reid

./: .gitignore  README.md  pyproject.toml
configs/PointCloud/intra/: 4D-OR_ReID.yaml  OR_ReID_13.yaml
configs/PointCloud/pretrained/: SUSTech1K_4D-OR_ReID.yaml  SUSTech1K_OR_ReID_13.yaml
configs/RGB/intra/: 4D-OR_ReID.yaml  OR_ReID_13.yaml
configs/RGB/pretrained/: SUSTech1K_4D-OR_ReID.yaml  SUSTech1K_OR_ReID_13.yaml
docs/: README.md  index.html
docs/static/css/: blog.css  index.css
docs/static/js/: bib.js  main.js  obj-viewer.js  toc.js  video-controls.js
src/: eval.py  train.py
src/data/: collate_fn.py  dataset.py  meta.py  or_reid_dataset.py  sampler.py  transform.py
src/evaluation/: __init__.py  evaluator.py  metric.py
src/modeling/: base_model.py  loss_aggregator.py  modules.py
src/modeling/backbones/: resnet.py
src/modeling/losses/: base.py  bce.py  supconloss.py  triplet.py
src/modeling/models/: baseline.py
src/utils/: __init__.py  checkpoints.py  common.py  msg_manager.py  paper.py  pprint.py  statistics.py
