[project]
name = "Orion" # Project Code Name
version = "0.1.0"
description = "Code for From Role-Based Surgical Domain Modeling To Personalized OR Intelligence"
readme = "README.md"

# Avoid pinning to an exact patch. Still effectively 3.11 only.
requires-python = ">=3.11.12,<3.12"

dependencies = [
  "addict>=2.4.0",
  "easydict>=1.13",
  "einops==0.8.1",
  "ffmpeg>=1.4",
  "hydra-colorlog",
  "hydra-core",
  "imageio[ffmpeg]",
  "matplotlib==3.9.2",
  "open3d==0.18.0",
  "opencv-python>=4.12.0.88",
  "rootutils",
  "seaborn>=0.13.2",
  "torch-geometric>=2.6.1",
  "trimesh>=4.6.8",
  "wandb[media]>=0.22.2",
  "torch==2.7.0",
  "torchvision==0.22.0",
  "triton==3.3.0; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
  "rich>=14.3.2",
  "gdown>=5.2.1",
  "nvitop>=1.6.2",
]

[tool.uv]
# PyTorch's wheel index plus PyPI frequently needs this to resolve sanely.
# If you want stricter index behavior, remove this and set the env var only when needed.
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
triton = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402", "F821"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
reportUnboundVariable = "none"
include = ["src"]
exclude = ["**/__pycache__", "./data", "./logs"]
